--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.2.1",
+    "turkey-map-react": "^1.1.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
